Feat: setup a namespace in the JS files. Removed players and added it into its own js file. Installed express and removed node-static.

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<title>Wonder Wheel</title>
 		<meta name="description" content="A spinner that chooses the next person to lead the FE meetups." />
-		<link rel="stylesheet" href="/_client/styles/main.css" type="text/css"/>
+		<link rel="stylesheet" href="/styles/main.css" type="text/css"/>
 	</head>
 	<body>
 	<section class="content">
@@ -22,6 +22,6 @@
 		</div>
 	</section>
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-		<script type="text/javascript" src="/_client/scripts/main.js"></script>
+		<script type="text/javascript" src="/scripts/main.js"></script>
 	</body>
 </html>
