--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
 		</div>
 	</section>
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+		<script src='https://cdn.firebase.com/js/client/2.2.1/firebase.js'></script>
 		<script type="text/javascript" src="/_client/scripts/main.js"></script>
 	</body>
 </html>
